--- a/packages/eslint-plugin-cap/package.json
+++ b/packages/eslint-plugin-cap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ndbs/eslint-plugin-cap",
+  "name": "@ndbs-dk/eslint-plugin-cap",
   "version": "1.0.0",
   "description": "NDBS ESLint rules for SAP CAP projects",
   "author": "gizemsoylutr",
